# image-roamer

./: CMakeLists.txt  LICENSE  README.md
doc/en/: README.md
example/: image_roamer_example.cpp
include/: image_roamer.hpp  utils.hpp
src/: image_roamer.cpp  utils.cpp
